Revert collecting